--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Static files for the PERSONAL app are hosted here.
+<!DOCTYPE html>
+<html>
+<head>
+<title>PERSONAL - Static Content</title>
+<meta charset="UTF-8">
+</head>
+<body style="backgroundColor: black; color:white">
+<p>Static files for the PERSONAL app are hosted here.</p>
+</body>
+</html>
+
