--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>PERSONAL - Static Content</title>
-<meta charset="UTF-8">
-</head>
-<body style="backgroundColor: black; color:white">
-<p>Static files for the PERSONAL app are hosted here.</p>
-</body>
+  <head>
+    <style>
+      body {
+        background-color: black;
+        color: lightgray;
+        text-align: center;
+      }
+    </style>
+    <title>PERSONAL - Static Content</title>
+    <meta charset="UTF-8">
+  </head>
+  <body>
+    <p>Static files for the PERSONAL app are hosted here.</p>
+  </body>
 </html>
 
