--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
-<!DOCTYPE html>
 <html>
   <head>
     <style>
       body {
-        background-color: black;
+        background: linear-gradient(#4b1958, #000000);
         color: lightgray;
         text-align: center;
+        height: 100%;
+        margin: 0;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+      }
+      #logo {
+         margin-top: 300px;  
+      }
+      .white {
+          color: white 
+      }
+      html {
+          height: 100%;
       }
     </style>
     <title>PERSONAL - Static Content</title>
     <meta charset="UTF-8">
   </head>
   <body>
-    <p>Static files for the PERSONAL app are hosted here.</p>
+    <div id="content">  
+      <img id="logo" src="resources/logo-white.png">
+      <div class="white">Static files for the PERSONAL app are hosted here.</div>
+    </div>
   </body>
 </html>
-
