--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <style>
       body {
+        font: 400 0.875rem/1.25rem Roboto,Arial,sans-serif;
         background: linear-gradient(#4b1958, #000000);
         color: lightgray;
         text-align: center;
