--- a/app-linking/CompleteProviderSetup.html
+++ b/app-linking/CompleteProviderSetup.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div id="content">  
-      <img id="logo" src="resources/logo-white.png">
+      <img id="logo" src="/resources/logo-white.png">
       <div class="white">Redirecting you to provider setup in the PERSONAL app. Please wait a moment.</div>
     </div>
   </body>
