--- a/app-linking/CompleteProviderSetup.html
+++ b/app-linking/CompleteProviderSetup.html
@@ -22,7 +22,7 @@
       }
     </style>
     <script>window.location.replace("personal://CompleteProviderSetup");</script>
-    <title>PERSONAL - Static Content</title>
+    <title>PERSONAL - CompleteProviderSetup</title>
     <meta charset="UTF-8">
   </head>
   <body>
