--- a/app-linking/CompleteProviderSetup.html
+++ b/app-linking/CompleteProviderSetup.html
@@ -21,7 +21,7 @@
           height: 100%;
       }
     </style>
-    <script>window.location.replace("personal://CompleteProviderSetup");</script>
+    <script>window.location.replace("exp://127.0.0.1:19000/CompleteProviderSetup");</script>
     <title>PERSONAL - CompleteProviderSetup</title>
     <meta charset="UTF-8">
   </head>
