--- a/app-linking/CompleteProviderSetup.html
+++ b/app-linking/CompleteProviderSetup.html
@@ -21,7 +21,9 @@
           height: 100%;
       }
     </style>
-    <script>window.location.replace("exp://127.0.0.1:19000/CompleteProviderSetup");</script>
+    <script>
+       //window.location.replace("exp://127.0.0.1:19000/CompleteProviderSetup");
+    </script>
     <title>PERSONAL - CompleteProviderSetup</title>
     <meta charset="UTF-8">
   </head>
@@ -29,6 +31,7 @@
     <div id="content">  
       <img id="logo" src="/resources/logo-white.png">
       <div class="white">Redirecting you to provider setup in the PERSONAL app. Please wait a moment.</div>
+      <a href="exp://127.0.0.1:19000/CompleteProviderSetup">Click here to return to your app.</a>
     </div>
   </body>
 </html>
