--- a/app-linking/CompleteProviderSetup.html
+++ b/app-linking/CompleteProviderSetup.html
@@ -31,7 +31,7 @@
     <div id="content">  
       <img id="logo" src="/resources/logo-white.png">
       <div class="white">Redirecting you to provider setup in the PERSONAL app. Please wait a moment.</div>
-      <a href="exp://127.0.0.1:19000/CompleteProviderSetup">Click here to return to your app.</a>
+      <a class="white" href="exp://127.0.0.1:19000/CompleteProviderSetup">Click here to return to your app.</a>
     </div>
   </body>
 </html>
