--- a/app-linking/CompleteProviderSetup.html
+++ b/app-linking/CompleteProviderSetup.html
@@ -12,7 +12,8 @@
         background-attachment: fixed;
       }
       #logo {
-         margin-top: 300px;  
+         margin-top: 300px;
+         margin-bottom: 100px;
       }
       .white {
           color: white 
@@ -20,6 +21,7 @@
       html {
           height: 100%;
       }
+      
     </style>
     <script>
        var redirect = "exp://127.0.0.1:19000/--/CompleteProviderSetup" + window.location.search;
