--- a/app-linking/CompleteProviderSetup.html
+++ b/app-linking/CompleteProviderSetup.html
@@ -24,7 +24,7 @@
       
     </style>
     <script>
-       var redirect = "exp://127.0.0.1:19000/--/CompleteProviderSetup" + window.location.search;
+       var redirect = "exp://127.0.0.1:19000/--/p" + window.location.search;
        var link = document.getElementById("redirect-link");
        link.setAttribute('href', redirect);
        //window.location.replace(redirect);
@@ -36,7 +36,7 @@
     <div id="content">  
       <img id="logo" src="/resources/logo-white.png">
       <div class="white">Redirecting you to provider setup in the PERSONAL app. Please click the link below to return to the app.</div>
-      <a id="redirect-link" class="white" href="exp://127.0.0.1:19000/--/CompleteProviderSetup">Click here to return to your app.</a>
+      <a id="redirect-link" class="white" href="exp://127.0.0.1:19000/--/">Click here to return to your app.</a>
     </div>
   </body>
 </html>
