--- a/app-linking/CompleteProviderSetup.html
+++ b/app-linking/CompleteProviderSetup.html
@@ -28,6 +28,7 @@
          var redirect = "exp://127.0.0.1:19000/--/p" + window.location.search;
          var link = document.getElementById("redirect-link");
          link.setAttribute('href', redirect);
+        alert(redirect);
          //window.location.replace(redirect);
       });
     </script>
