--- a/app-linking/CompleteProviderSetup.html
+++ b/app-linking/CompleteProviderSetup.html
@@ -25,7 +25,7 @@
     </style>
     <script>
       window.addEventListener('load', function () {
-         var redirect = "exp://127.0.0.1:19000/--/p" + window.location.search;
+         var redirect = "exp://127.0.0.1:19000/--/" + window.location.search;
          var link = document.getElementById("redirect-link");
          link.setAttribute('href', redirect);
         alert(redirect);
