--- a/app-linking/CompleteProviderSetup.html
+++ b/app-linking/CompleteProviderSetup.html
@@ -21,14 +21,16 @@
       html {
           height: 100%;
       }
-      
+      #url {
+        margin-top: 100px;
+      }
     </style>
     <script>
       window.addEventListener('load', function () {
          var redirect = "exp://127.0.0.1:19000/--/AddProviderConnection" + window.location.search;
          var link = document.getElementById("redirect-link");
          link.setAttribute('href', redirect);
-        alert(redirect);
+         document.getElementById("id").innerHTML(redirect);
          //window.location.replace(redirect);
       });
     </script>
@@ -40,6 +42,7 @@
       <img id="logo" src="/resources/logo-white.png">
       <div class="white">Redirecting you to provider setup in the PERSONAL app. Please click the link below to return to the app.</div>
       <a id="redirect-link" class="white" href="exp://127.0.0.1:19000/--/AddProviderConnection">Click here to return to your app.</a>
+      <div id="url"></div> 
     </div>
   </body>
 </html>
