--- a/app-linking/CompleteProviderSetup.html
+++ b/app-linking/CompleteProviderSetup.html
@@ -30,7 +30,7 @@
          var redirect = "exp://127.0.0.1:19000/--/AddProviderConnection" + window.location.search;
          var link = document.getElementById("redirect-link");
          link.setAttribute('href', redirect);
-         document.getElementById("id").innerHTML(redirect);
+         document.getElementById("id").innerHTML = redirect;
          //window.location.replace(redirect);
       });
     </script>
