--- a/policies/PrivacyPolicy.html
+++ b/policies/PrivacyPolicy.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <div id="content">  
-      <img id="logo" src="resources/logo-white.png">
+      <img id="logo" src="../resources/logo-white.png">
       <div class="white">Privacy Policy here.</div>
     </div>
   </body>
